

[tool.poetry]
name = "fahrtenbuchung"
version = "0.1.0"
description = "Fahrtenbuchung Website"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
Werkzeug = "^3.0.1"
gunicorn = "^21.2.0"

[tool.poetry.scripts]
start = "app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
